# Dippy

./: .dippy  .gitignore  CLAUDE.md  README.md  dippy-local-sample.toml  justfile  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/add-command/: SKILL.md  patterns.md
.claude/skills/check-coverage/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/verify-counts/: SKILL.md
.github/workflows/: add-command.yml  check.yml  ci.yml  fix-bug.yml  release.yml
docs/: _comparison.md  all-local-man-pages.md  claude-code-hooks.md  config-enhancement.md  config-v1.md  config.md  cursor-hooks.md  security-model.md
docs/assistants/: codex-cli.md
docs/hook-systems/: gemini-cli-hooks.md
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  snippets.json
editors/vscode/samples/: exhaustive.dippy
editors/vscode/syntaxes/: dippy.tmLanguage.json
examples/: config  test-config.sh
hooks/: hook.py  hooks.json
prompts/: add-command.md  adding-commands.md  check-comprehensive.md  debug.md  release.md
src/dippy/: __init__.py  __main__.py  dippy.py  dippy_statusline.py
src/dippy/cli/: 7z.py  __init__.py  ansible.py  arch.py  archive.py  auth0.py  awk.py  aws.py  azure.py  binhex.py  black.py  brew.py  caffeinate.py  cargo.py  cdk.py  codesign.py  compression_tool.py  curl.py  defaults.py  diskutil.py  dmesg.py  docker.py  dscl.py  duckdb.py  env.py  fd.py  find.py  fzf.py  gcloud.py  gh.py  git.py  gzip.py  hdiutil.py  helm.py  iconv.py  ifconfig.py  ip.py  isort.py  journalctl.py  kubectl.py  (+47 more)
src/dippy/core/: __init__.py  allowlists.py  analyzer.py  bash.py  config.py  parser.py  paths.py  patterns.py  sql.py
tests/: conftest.py  dippy-local-test.toml  test_analyzer_bugs.py  test_aws.py  test_az.py  test_brew.py  test_cdk.py  test_config.py  test_curl.py  test_customization.py  test_dippy.py  test_docker.py  test_entrypoint.py  test_find.py  test_gcloud.py  test_gh.py  test_git.py  test_kubectl.py  test_modes.py  test_reason.py  test_simple.py  test_statusline.py  test_strip_global_flags.py  test_terraform.py  test_wget.py  test_xargs.py
tests/cli/: test_7z.py  test_ansible.py  test_arch.py  test_auth0.py  test_awk.py  test_aws.py  test_az.py  test_azure.py  test_base64.py  test_binhex.py  test_black.py  test_brew.py  test_caffeinate.py  test_cargo.py  test_cdk.py  test_codesign.py  test_compression_tool.py  test_curl.py  test_defaults.py  test_descriptions.py  test_diskutil.py  test_dmesg.py  test_docker.py  test_dscl.py  test_duckdb.py  test_env.py  test_fd.py  test_find.py  test_fzf.py  test_gcloud.py  test_gh.py  test_git.py  test_gzip.py  test_hdiutil.py  test_helm.py  test_iconv.py  test_ifconfig.py  test_ip.py  test_isort.py  test_journalctl.py  (+48 more)
tests/core/: test_allowlists.py  test_bash.py  test_config.py  test_parser.py  test_paths.py  test_router.py  test_sql.py
tools/: check_style.py
