[project]
name = "dippy"
version = "0.2.0"
description = "Approval autopilot for Claude Code — stay in the flow by automatically allowing safe commands"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["claude", "claude-code", "hook", "bash", "permissions", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "parable @ git+https://github.com/ldayton/Parable.git@613e117f4825f0d8809a91d7d5c64afd98d73ac1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dippy = "dippy.dippy:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/dippy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
